--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Stefanini - Desafio mobile</string>
+    <string name="title_activity_wheather_search">WheatherSearchActivity</string>
+    <string name="cities_title">Selecione a cidade</string>
 </resources>
